tests/e2e/semantics/time_values_invalid3.error
Error: syntax error in story at line 1, column 5

1|    a = 2h3d
          ^^^^

E0068: Time value inconsistent: `d` must to be before `h`
